# Xion

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake
Testing/Temporary/: CTestCostData.txt
include/: adaBoost.h  adaBoostTypes.h  attentionalCascade.h  dataset.h  datasetController.h  datasetValidator.h  haarFeature.h  haarFeatureGenerator.h  integralImage.h  normalization.h  serializer.h  timeEval.h  xionConfig.h  xionConfig.h.in  xionMessages.h  xionTypes.h  xionio.h
include/cuda/: mergeSort_common.h  parallelFunctions.h
modules/cuda/: mergeSort.cu  parallelFunctions.cu
modules/dataset/: dataset.c  datasetController.c  datasetValidator.c  serializer.c  xionio.c
modules/features/: haarFeature.c  haarFeatureGenerator.c
modules/frameworks/: adaBoost.c  attentionalCascade.c  main.c
modules/preprocesing/: integralImage.c
modules/preprocessing/: integralImage.c  normalization.c
modules/reporting/: timeEval.c
test/: datasetControllerTest.c  datasetTest.c  datasetTest.h  datasetValidatorTest.c  integralImageTest.c  main.c  normalizationTest.c  preprocessingTest.c  preprocessingTest.h  xionTest.h
